# diff-insight

./: .gitignore  LICENSE  Pipfile  README.md  categories.yaml  daily-commits.sha  generate-report-batch.sh  generate-report.sh  index.md.j2  last-commit.sha
site/: .gitignore  CHANGELOG.md  LICENSE  README.md  about.md  diff-insight-site-generator.cabal  privacy.md
site/app/: Main.hs
site/posts/202409/: report-20240912-misc.md  report-20240912-openai.md  report-20240913-misc.md  report-20240913-openai.md  report-20240914-misc.md  report-20240914-openai.md  report-20240914-search.md  report-20240915-misc.md  report-20240915-openai.md  report-20240916-misc.md  report-20240916-search.md  report-20240917-misc.md  report-20240917-search.md  report-20240918-misc.md  report-20240918-openai.md  report-20240918-search.md  report-20240919-openai.md  report-20240919-search.md  report-20240920-misc.md  report-20240920-openai.md  report-20240920-search.md  report-20240921-misc.md  report-20240921-openai.md  report-20240923-misc.md  report-20240923-openai.md  report-20240924-misc.md  report-20240924-openai.md  report-20240924-search.md  report-20240925-misc.md  report-20240925-search.md  report-20240926-misc.md  report-20240926-openai.md  report-20240926-search.md  report-20240927-misc.md  report-20240927-openai.md  report-20240927-search.md  report-20240928-misc.md  report-20240928-openai.md  report-20240930-misc.md
site/posts/202410/: report-20241001-openai.md  (+70 more)
site/templates/: category.html  content.html  default.html  index.html  post-list-by-date.html  post.html
(+697 files in other folders)
