cabal-version:      3.0
name:               diff-insight-site-generator
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             autotaker
maintainer:         autotaker@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

executable diff-insight-site-generator
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base    ^>=4.17.2.1
    , hakyll  ^>=4.16.2.2
    , pandoc

  hs-source-dirs:   app
  default-language: GHC2021
